--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -10,33 +10,23 @@
 <body>
 <h1>Manage persons</h1>
 <table class="table">
-  <thead>
+  <thead class="table-success">
   <tr>
-    <th scope="col">#</th>
-    <th scope="col">First</th>
-    <th scope="col">Last</th>
-    <th scope="col">Handle</th>
+    <th scope="col">First name</th>
+    <th scope="col">Last name</th>
+    <th scope="col">Email</th>
+    <th scope="col">Password</th>
   </tr>
   </thead>
   <tbody>
-  <tr>
-    <th scope="row">1</th>
-    <td>Mark</td>
-    <td>Otto</td>
-    <td>@mdo</td>
-  </tr>
-  <tr>
-    <th scope="row">2</th>
-    <td>Jacob</td>
-    <td>Thornton</td>
-    <td>@fat</td>
-  </tr>
-  <tr>
-    <th scope="row">3</th>
-    <td>John</td>
-    <td>Doe</td>
-    <td>@social</td>
-  </tr>
+  <th:block th:each="person: ${personsList}">
+    <tr>
+      <td th:text="${person.firstName}"/>
+      <td> -> "${person.firstName}" <- </td>
+      <td th:text="${person.email}"/>
+      <td th:text="${person.password}"/>
+    </tr>
+  </th:block>
   </tbody>
 </table>
 </body>
