--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Manage persons</h1>
+<a th:href="@{/persons/new}">Add new person</a>
 <table class="table">
   <thead class="table-success">
   <tr>
@@ -22,7 +23,7 @@
   <th:block th:each="person: ${personsList}">
     <tr>
       <td th:text="${person.firstName}"/>
-      <td> -> "${person.firstName}" <- </td>
+      <td> -> [[ ${person.lastName} ]] <- </td>
       <td th:text="${person.email}"/>
       <td th:text="${person.password}"/>
     </tr>
