--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -17,6 +17,7 @@
     <th scope="col">Last name</th>
     <th scope="col">Email</th>
     <th scope="col">Password</th>
+    <th></th>
   </tr>
   </thead>
   <tbody>
@@ -26,6 +27,10 @@
       <td> -> [[ ${person.lastName} ]] <- </td>
       <td th:text="${person.email}"/>
       <td th:text="${person.password}"/>
+      <td>
+        <a th:href="@{'/persons/delete/' + ${person.id}}">Delete</a>
+        Update
+      </td>
     </tr>
   </th:block>
   </tbody>
