--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -29,7 +29,7 @@
       <td th:text="${person.password}"/>
       <td>
         <a th:href="@{'/persons/delete/' + ${person.id}}">Delete</a>
-        Update
+        <a th:href="@{'/persons/update/' + ${person.id}}">Update</a>
       </td>
     </tr>
   </th:block>
